test/fail/no-timer-canc.mo
//MOC-FLAG -no-timer

import { cancelTimer } = "mo:⛔";
